syntax = "proto3";

service DivisionService {
  rpc division(NumberParams) returns (NumberResult) {}
}

message NumberParams {
    double fNumber = 1;
    double sNumber = 2;
}

message NumberResult {
    double result = 1;
}